--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,5 +41,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets)
 target_link_libraries(demo ${PROJECT_NAME})
 
-target_link_libraries(sources Qt5::Core Qt5::Widgets )
+#target_link_libraries(sources Qt5::Core Qt5::Widgets )
 
