--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ python_files/temp_js
 .idea
 cmake-build-debug
 test
+/cmake_install.cmake
+/CMakeCache.txt
+/Makefile
+/CMakeFiles/
+lib/
+build/conan.lock
+build/conanbuildinfo.cmake
+build/conanbuildinfo.txt
+build/conaninfo.txt
+build/qt.conf
+build/graph_info.json
+build/conanfile.txt
