--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,10 @@ __pycache__
 python_files/temp_js
 .idea
 cmake-build-debug
-test
-/cmake_install.cmake
-/CMakeCache.txt
-/Makefile
-/CMakeFiles/
-lib/
+build_bb
 build/conan.lock
 build/conanbuildinfo.cmake
 build/conanbuildinfo.txt
 build/conaninfo.txt
 build/qt.conf
 build/graph_info.json
-build/conanfile.txt
