--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.3)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -18,8 +18,10 @@ project(BlindBrowser)
 
 conan_basic_setup()
 
-
+find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
 find_package(PythonLibs REQUIRED)
+
+
 set(CMAKE_SHARED_MODULE_PREFIX "")
 
 #find_package(Boost COMPONENTS python)
@@ -33,6 +35,7 @@ add_library(${PROJECT_NAME} STATIC
 
 add_executable(demo main.cpp)
 
+include_directories(${BOOST_INCLUDE_DIRS})
 include_directories(${PYTHON_INCLUDE_DIRS})
 
 
