Fixed problems with AUTOMOC and define Q_OBJECT

--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,6 @@ __pycache__
 python_files/temp_js
 .idea
 cmake-build-debug
-test
-.Makefile.swp
-.qmake.stash
-build/BlindBrowser_autogen
-build/lib
-build/Makefile
-build/CMakeFiles
-build/cmake_install.cmake
-build/bin
-build/CMakeCache.txt
-build/conan.lock
-build/conanbuildinfo.cmake
-build/conanbuildinfo.txt
-build/conaninfo.txt
-build/qt.conf
-build/graph_info.json
+build_bb
+build/*
+!build/conanfile.txt
