--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ python_files/temp_js
 .idea
 cmake-build-debug
 build_bb
-/conan/conaninfo.txt
-/conan/graph_info.json
-/conan/qt.conf
-/conan/conanbuildinfo.txt
-/conan/conanbuildinfo.cmake
-/conan/conan.lock
+
+conan/*
+!conan/conanfile.txt
