--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ project(BlindBrowser)
 
 conan_basic_setup()
 
-
+find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
+find_package(PythonLibs REQUIRED)
 find_package(Qt6  COMPONENTS Widgets Core)
 
 
@@ -31,6 +32,8 @@ add_library(${PROJECT_NAME} STATIC
         ./src/PyFunctions.cpp
         ./src/AddressBar.cpp
         )
+add_custom_target(pyfiles ALL
+        COMMAND python3 ${PROJECT_SOURCE_DIR}/build_clion.py )
 
 add_executable(demo main.cpp)
 add_dependencies(demo pyfiles)
@@ -43,6 +46,6 @@ target_include_directories(${PROJECT_NAME} PUBLIC
         "$<INSTALL_INTERFACE:headers>"
         )
 
-target_link_libraries(demo ${PROJECT_NAME} ${CONAN_LIBS})
+target_link_libraries(demo ${PROJECT_NAME} ${CONAN_LIBS} ${PYTHON_LIBRARIES})
 
 
